@@ -510,29 +510,36 @@ $msgcode['reduceAttrMap']['ERR'] = 119;
 $page['dict']['title'] = 'Dictionary';
 $page['dict']['parent'] = 'config';
 $tab['dict']['default'] = 'View';
-$tab['dict']['edit'] = 'Edit words';
 $tab['dict']['chapters'] = 'Manage chapters';
 $tabhandler['dict']['default'] = 'renderDictionary';
-$tabhandler['dict']['edit'] = 'renderDictionaryEditor';
 $tabhandler['dict']['chapters'] = 'renderChaptersEditor';
-$ophandler['dict']['edit']['del'] = 'reduceDictionary';
-$ophandler['dict']['edit']['upd'] = 'updateDictionary';
-$ophandler['dict']['edit']['add'] = 'supplementDictionary';
 $ophandler['dict']['chapters']['del'] = 'delChapter';
 $ophandler['dict']['chapters']['upd'] = 'updateChapter';
 $ophandler['dict']['chapters']['add'] = 'addChapter';
-$msgcode['reduceDictionary']['OK'] = 50;
-$msgcode['reduceDictionary']['ERR'] = 111;
-$msgcode['updateDictionary']['OK'] = 51;
-$msgcode['updateDictionary']['ERR'] = 109;
-$msgcode['supplementDictionary']['OK'] = 52;
-$msgcode['supplementDictionary']['ERR'] = 110;
 $msgcode['delChapter']['OK'] = 53;
 $msgcode['delChapter']['ERR'] = 114;
 $msgcode['updateChapter']['OK'] = 54;
 $msgcode['updateChapter']['ERR'] = 113;
 $msgcode['addChapter']['OK'] = 55;
 $msgcode['addChapter']['ERR'] = 112;
+
+$page['chapter']['title_handler'] = 'dynamic_title_chapter';
+$page['chapter']['parent'] = 'dict';
+$page['chapter']['bypass'] = 'chapter_no';
+$page['chapter']['bypass_type'] = 'uint';
+$tab['chapter']['default'] = 'View';
+$tab['chapter']['edit'] = 'Edit';
+$tabhandler['chapter']['default'] = 'renderChapter';
+$tabhandler['chapter']['edit'] = 'renderChapterEditor';
+$ophandler['chapter']['edit']['del'] = 'reduceDictionary';
+$ophandler['chapter']['edit']['upd'] = 'updateDictionary';
+$ophandler['chapter']['edit']['add'] = 'supplementDictionary';
+$msgcode['reduceDictionary']['OK'] = 50;
+$msgcode['reduceDictionary']['ERR'] = 111;
+$msgcode['updateDictionary']['OK'] = 51;
+$msgcode['updateDictionary']['ERR'] = 109;
+$msgcode['supplementDictionary']['OK'] = 52;
+$msgcode['supplementDictionary']['ERR'] = 110;
 
 $page['ui']['title'] = 'User interface';
 $page['ui']['parent'] = 'config';
